--- a/web/package.json
+++ b/web/package.json
@@ -31,7 +31,7 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:3001",
-  "homepage": "https://nba-react-ts-branch.herokuapp.com/",
+  "homepage": "process.env.PUBLIC_URL",
   "eslintConfig": {
     "extends": "react-app"
   },
