Adding workspaces and prettier

--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "prestart": "npm install && npm run build",
+    "prestart": "npm run build",
     "start": "node build/server.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
