--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -15,12 +15,7 @@
     "jsx": "preserve",
     "experimentalDecorators": true,
     "outDir": "./build",
-    "lib": [
-      "dom",
-      "es2015",
-    ]
+    "lib": ["dom", "esnext"]
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
