--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-
     {
       "type": "node",
       "request": "launch",
@@ -13,9 +12,7 @@
       "preLaunchTask": "npm: build - server",
       "cwd": "${workspaceFolder}",
       "protocol": "inspector",
-      "outFiles": [
-        "${workspaceFolder}/server/build/**/*.js"
-      ]
+      "outFiles": ["${workspaceFolder}/server/build/**/*.js"]
     }
   ]
 }
