--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "nba-react-ts",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "start": "concurrently \"npm run api\" \"npm run web\"",
     "api": "cd server && npm start",
@@ -10,10 +9,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "cd web && yarn && yarn build"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
-  "dependencies": {
-    "concurrently": "^4.0.1"
-  }
+  "dependencies": {},
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "prettier": "^1.16.1"
+  },
+  "workspaces": [
+    "server",
+    "web"
+  ]
 }
