--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "scripts": {
     "start": "concurrently \"npm run api\" \"npm run web\"",
-    "api": "cd server && npm start",
+    "api": "cd server && yarn start",
     "web": "cd web && yarn start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "cd web && yarn && yarn build"
   },
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "concurrently": "^4.1.0"
+  },
   "devDependencies": {
-    "concurrently": "^4.1.0",
     "prettier": "^1.16.1"
   },
   "workspaces": [
