--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
     "@types/reach__router": "^1.2.2",
     "@types/react-icons": "^2.2.6",
     "@types/reactstrap": "^6.4.3",
+    "@types/react": "^16.7.22",
+    "@types/react-dom": "^16.0.11",
     "bootstrap": "^4.2.1",
     "date-fns": "^1.30.1",
     "mobx": "^5.8.0",
@@ -38,8 +40,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "@types/react": "^16.7.22",
-    "@types/react-dom": "^16.0.11"
-  }
+  "devDependencies": {}
 }
