--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}\\server\\app\\server.ts",
+      "program": "${workspaceFolder}/server/app/server.ts",
       "preLaunchTask": "npm: build - server",
       "cwd": "${workspaceFolder}",
       "protocol": "inspector",
