--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,23 @@
   "description": "",
   "main": "app/server.ts",
   "dependencies": {
-    "@types/cors": "^2.8.4",
-    "@types/express": "^4.16.0",
-    "@types/morgan": "^1.7.35",
-    "@types/node-fetch": "^2.1.4",
+    "apollo-datasource-rest": "^0.3.1",
+    "apollo-server": "^2.4.2",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "graphql": "^14.1.1",
+    "graphql-tools": "^4.0.4",
     "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
     "typescript": "^3.2.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
+    "@types/graphql": "^14.0.7",
+    "@types/morgan": "^1.7.35",
+    "@types/node-fetch": "^2.1.4"
+  },
   "scripts": {
     "prestart": "npm run build",
     "start": "node build/server.js",
