--- a/server/package.json
+++ b/server/package.json
@@ -19,13 +19,18 @@
     "@types/express": "^4.16.0",
     "@types/graphql": "^14.0.7",
     "@types/morgan": "^1.7.35",
-    "@types/node-fetch": "^2.1.4"
+    "@types/node-fetch": "^2.1.4",
+    "graphql-code-generator": "^0.16.1",
+    "graphql-codegen-typescript-common": "^0.16.1",
+    "graphql-codegen-typescript-resolvers": "^0.16.1",
+    "graphql-codegen-typescript-server": "^0.16.1"
   },
   "scripts": {
     "prestart": "npm run build",
     "start": "node build/server.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate": "gql-gen --config codegen.yml"
   },
   "keywords": [],
   "author": "",
