--- a/server/codegen.yml
+++ b/server/codegen.yml
@@ -1,8 +1,11 @@
 overwrite: true
 schema: http://localhost:4000
 generates:
-  ./generated/index.ts:
+  ./app/generated/index.ts:
     plugins:
       - "typescript-common"
       - "typescript-server"
       - "typescript-resolvers"
+    config:
+      contextType: ../context#IContext
+
