--- a/server/codegen.yml
+++ b/server/codegen.yml
@@ -7,5 +7,5 @@ generates:
       - "typescript-server"
       - "typescript-resolvers"
     config:
-      contextType: ../context#IContext
+      contextType: ../interface#IContext
 
