--- a/web/package.json
+++ b/web/package.json
@@ -7,16 +7,20 @@
     "@types/jest": "23.3.10",
     "@types/node": "10.12.15",
     "@types/reach__router": "^1.2.2",
-    "@types/react-icons": "^2.2.6",
-    "@types/reactstrap": "^6.4.3",
     "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
+    "@types/react-icons": "^2.2.6",
+    "@types/reactstrap": "^6.4.3",
+    "apollo-cache-inmemory": "^1.4.3",
+    "apollo-client": "^2.4.13",
+    "apollo-link-http": "^1.5.11",
     "bootstrap": "^4.2.1",
     "date-fns": "^1.30.1",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
+    "react-apollo": "^2.4.1",
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
     "react-scripts": "2.1.1",
@@ -27,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate": "gql-gen --config codegen.yml"
   },
   "proxy": "http://localhost:3001",
   "homepage": "process.env.PUBLIC_URL",
@@ -40,5 +45,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "graphql-code-generator": "^0.17.0",
+    "graphql-codegen-typescript-react-apollo-template": "^0.17.0"
+  }
 }
