--- a/web/package.json
+++ b/web/package.json
@@ -4,13 +4,6 @@
   "private": true,
   "dependencies": {
     "@reach/router": "^1.2.1",
-    "@types/jest": "23.3.10",
-    "@types/node": "10.12.15",
-    "@types/reach__router": "^1.2.2",
-    "@types/react": "^16.7.22",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-icons": "^2.2.6",
-    "@types/reactstrap": "^6.4.3",
     "apollo-cache-inmemory": "^1.4.3",
     "apollo-client": "^2.4.13",
     "apollo-link-http": "^1.5.11",
@@ -31,8 +24,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "generate": "gql-gen --config codegen.yml"
+    "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:3001",
   "homepage": "process.env.PUBLIC_URL",
@@ -46,7 +38,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "graphql-code-generator": "^0.17.0",
-    "graphql-codegen-typescript-react-apollo-template": "^0.17.0"
+    "@types/jest": "23.3.10",
+    "@types/node": "10.12.15",
+    "@types/reach__router": "^1.2.2",
+    "@types/react": "^16.7.22",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-icons": "^2.2.6",
+    "@types/reactstrap": "^6.4.3"
   }
 }
