--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
     "apollo-datasource-rest": "^0.3.1",
     "apollo-server": "^2.4.2",
     "cors": "^2.8.5",
+    "dataloader": "^1.4.0",
+    "date-fns": "^1.30.1",
     "express": "^4.16.4",
     "graphql": "^14.1.1",
     "graphql-tools": "^4.0.4",
