--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "app/server.ts",
   "dependencies": {
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
+    "@types/graphql": "^14.0.7",
+    "@types/morgan": "^1.7.35",
+    "@types/node-fetch": "^2.1.4",
     "apollo-datasource-rest": "^0.3.1",
-    "apollo-server": "^2.4.2",
+    "apollo-server-express": "^2.4.8",
     "cors": "^2.8.5",
     "dataloader": "^1.4.0",
     "date-fns": "^1.30.1",
@@ -16,13 +21,7 @@
     "node-fetch": "^2.3.0",
     "typescript": "^3.2.2"
   },
-  "devDependencies": {
-    "@types/cors": "^2.8.4",
-    "@types/express": "^4.16.0",
-    "@types/graphql": "^14.0.7",
-    "@types/morgan": "^1.7.35",
-    "@types/node-fetch": "^2.1.4"
-  },
+  "devDependencies": {},
   "scripts": {
     "prestart": "npm run build",
     "start": "node build/server.js",
