--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: http://localhost:4000
+schema: http://localhost:3001/graphql
 documents: ./web/src/graphql/*.gql
 generates:
   ./web/src/generated/graphqlComponents.tsx:
