--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
+    "@types/react": "^16.8.7",
     "graphql-tag": "^2.10.1",
     "react": "^16.8.3",
     "react-apollo": "^2.4.1"
