--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run api",
-    "api": "cd server && yarn start",
     "web": "cd web && yarn start",
     "generate": "gql-gen --config codegen.yml",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd web && yarn && yarn build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "GPL-3.0",
   "dependencies": {
@@ -22,13 +19,10 @@
     "graphql-codegen-typescript-client": "^0.17.0",
     "graphql-codegen-typescript-common": "^0.17.0",
     "graphql-codegen-typescript-react-apollo-template": "^0.17.0",
-    "graphql-codegen-typescript-resolvers": "^0.17.0",
-    "graphql-codegen-typescript-server": "^0.17.0",
     "prettier": "^1.16.1",
     "typescript": "^3.3.3333"
   },
   "workspaces": [
-    "server",
     "web"
   ],
   "resolutions": {
