--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "apollo-link-http": "^1.5.12",
     "bootstrap": "^4.2.1",
     "date-fns": "^1.30.1",
+    "graphql": "^14.5.8",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "node-sass": "^4.11.0",
