--- a/.github/workflows/deploy_development.yml
+++ b/.github/workflows/deploy_development.yml
@@ -1,10 +1,13 @@
-name: Build and Deploy Master
+name: Build and Deploy Development
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
-  build:
-    name: Build Web
+  deploy:
+    name: Build and Deploy development
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -15,20 +18,14 @@ jobs:
       - name: Use Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@master
         with:
-          version: ${{ matrix.node_version }}
+          node-version: ${{ matrix.node_version }}
 
       - name: Build
         run: |
           yarn install
-          cd web && yarn build
-  deploy:
-    name: Deploy to development
-    needs: [build]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
+          cd web && PUBLIC_URL=development.rickyg.io REACT_APP_API_URL=https://nba.rickyg.io/dev yarn build
+      - name: Deploy
         env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - run: echo $AWS_S3_BUCKET $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY
+        run: aws s3 sync --acl public-read --delete ./web/build s3://nba-dev-frontend
