--- a/.github/workflows/deploy_development.yml
+++ b/.github/workflows/deploy_development.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node_version: [10, 12]
+        node_version: [10]
 
     steps:
       - uses: actions/checkout@master
@@ -23,7 +23,7 @@ jobs:
       - name: Build
         run: |
           yarn install
-          cd web && PUBLIC_URL=development.rickyg.io REACT_APP_API_URL=https://nba.rickyg.io/dev yarn build
+          cd web && PUBLIC_URL=https://development.rickyg.io REACT_APP_API_URL=https://nba.rickyg.io/dev yarn build
       - name: Deploy
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
