--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,5 +24,5 @@ jobs:
 
       - name: Build
         run: |
-          yarn install
-          cd web && yarn build
+          npm run install
+          npm run build
