--- a/.github/workflows/deploy_development.yml
+++ b/.github/workflows/deploy_development.yml
@@ -22,10 +22,10 @@ jobs:
 
       - name: Build
         run: |
-          yarn install
-          cd web && PUBLIC_URL=https://development.rickyg.io REACT_APP_API_URL=https://nba.rickyg.io/dev yarn build
+          npm run install
+          PUBLIC_URL=https://development.rickyg.io REACT_APP_API_URL=https://nba.rickyg.io/dev npm run build
       - name: Deploy
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: aws s3 sync --acl public-read --delete ./web/build s3://nba-dev-frontend
+        run: aws s3 sync --acl public-read --delete ./build s3://nba-dev-frontend
