--- a/codegen.yml
+++ b/codegen.yml
@@ -1,8 +1,8 @@
 overwrite: true
 schema: http://localhost:4000/graphql
-documents: ./web/src/graphql/*.gql
+documents: ./src/graphql/*.gql
 generates:
-  ./web/src/generated/graphqlComponents.tsx:
+  ./src/generated/graphqlComponents.tsx:
     config:
       noNamespaces: true
     plugins:
