--- a/package.json
+++ b/package.json
@@ -1,31 +1,57 @@
 {
   "name": "nba-react-ts",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "web": "cd web && yarn start",
-    "generate": "gql-gen --config codegen.yml",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "license": "GPL-3.0",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "generate": "gql-gen --config codegen.yml",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "dependencies": {
-    "@types/react": "^16.8.7",
+    "@reach/router": "^1.2.1",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link-http": "^1.5.12",
+    "bootstrap": "^4.2.1",
+    "date-fns": "^1.30.1",
+    "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
+    "node-sass": "^4.11.0",
     "react": "^16.8.3",
-    "react-apollo": "^2.4.1"
+    "react-apollo": "^2.4.1",
+    "react-content-loader": "^4.3.0",
+    "react-dom": "^16.6.3",
+    "react-icons": "^3.2.2",
+    "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0"
   },
   "devDependencies": {
+    "@types/jest": "23.3.10",
+    "@types/reach__router": "^1.2.2",
+    "@types/react": "^16.7.22",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-icons": "^2.2.6",
+    "@types/reactstrap": "^6.4.3",
+    "typescript": "^3.3.3333",
     "graphql-code-generator": "^0.17.0",
     "graphql-codegen-typescript-client": "^0.17.0",
     "graphql-codegen-typescript-common": "^0.17.0",
     "graphql-codegen-typescript-react-apollo-template": "^0.17.0",
     "prettier": "^1.16.1",
-    "typescript": "^3.3.3333"
-  },
-  "workspaces": [
-    "web"
-  ],
-  "resolutions": {
-    "@types/react": "^16.8.7"
+    "@types/node": "^12.12.8"
   }
 }
