--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-client": "^2.5.1",
     "apollo-link-http": "^1.5.12",
     "bootstrap": "^4.2.1",
+    "bulma": "^0.9.0",
     "date-fns": "^1.30.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
@@ -41,17 +42,17 @@
   },
   "devDependencies": {
     "@types/jest": "23.3.10",
+    "@types/node": "^12.12.8",
     "@types/reach__router": "^1.2.2",
     "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
     "@types/react-icons": "^2.2.6",
     "@types/reactstrap": "^6.4.3",
-    "typescript": "^3.3.3333",
     "graphql-code-generator": "^0.17.0",
     "graphql-codegen-typescript-client": "^0.17.0",
     "graphql-codegen-typescript-common": "^0.17.0",
     "graphql-codegen-typescript-react-apollo-template": "^0.17.0",
     "prettier": "^1.16.1",
-    "@types/node": "^12.12.8"
+    "typescript": "^3.3.3333"
   }
 }
